# deams-pp

./: .gitignore  README.md  pyproject.toml
codes/: data_filter.py  data_filter_sicpv.py  pipeline_feminicidio.py
dados/: dados_feminicidio.xlsx  data_sipcv.csv
relatorios/: Projeto_DPG_MJSP_07_2026_REVISADO.docx
